# tinychain

./: .dockerignore  .gitignore  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DETAILS.md  Dockerfile  INSTALL.md  README.md  env  install.sh  local.Dockerfile  tinychain.service
auth/: Cargo.toml
auth/src/: lib.rs
client/: README.md  setup.cfg  setup.py
client-async/: setup.cfg
client-async/tinychain.async/: README.md  __init__.py
client-async/tinychain.async/tinychain.async.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
client-async/tinychain_async/: .gitignore  __init__.py  host.py
client/docs/: app.rst  btree.rst  chain.rst  cluster.rst  collection.rst  conf.py  decorators.rst  graph.rst  index.rst  interface.rst  math.interface.rst  math.operator.rst  math.rst  ml.rst  ml.service.rst  ref.rst  requirements.txt  scalar.rst  schema.rst  state.rst  table.rst  tensor.rst  util.rst  value.rst
client/node/: package.json
client/node/tinychain/: index.js  uri.js
client/py/: .gitignore  README.md  setup.cfg
client/py/docs/: conf.py  generic.rst  host.rst  index.rst  math.linalg.rst  ml.nn.rst  ml.optimizer.rst  requirements.txt  scalar.number.rst  scalar.ref.rst  scalar.value.rst  service.rst  state.rst  uri.rst
client/py/tinychain/: __init__.py  host.py  uri.py
client/py_async/: README.md  setup.cfg
client/py_async/docs/: conf.py  index.rst  requirements.txt
client/py_async/tinychain_async/: __init__.py  host.py
client/tests/: test_class.py  test_cluster.py  test_collection.py  test_integration.py  test_oo.py
client/tinychain/: __init__.py  annotations.py  app.py  base.py  chain.py  cluster.py  collection.py  constants.py  context.py  decorators.py  error.py  generic.py  host.py  interface.py  json.py  math.py  number.py  op.py  ref.py  reflect.py  registry.py  service.py  shape.py  state.py  uri.py  util.py  value.py
client/tinychain/app/: __init__.py
client/tinychain/collection/: __init__.py  base.py  bound.py  btree.py  collection.py  operator.py  schema.py  table.py  tensor.py
client/tinychain/graph/: __init__.py  app.py  edge.py  service.py
client/tinychain/host/: __init__.py  asynchronous.py  sync.py
client/tinychain/hosted_ml/: __init__.py  activation.py  interface.py  nn.py  optimizer.py  service.py  variable.py
client/tinychain/math/: __init__.py  base.py  constants.py  equation.py  interface.py  linalg.py  operator.py
client/tinychain/ml/: TEST_ADAM.py  TEST_NN.py  __init__.py  activation.py  avto_grad_test.py  cnn.py  constants.py  conv.py  dnn.py  interface.py  layers.py  linalg.py  mlr.py  nn.py  optimizer.py  service.py  test_NN.py  variable.py
client/tinychain/new_state/: __init__.py  generic.py  op.py  value.py
client/tinychain/reflect/: __init__.py  functions.py  meta.py  method.py  op.py  stub.py
client/tinychain/scalar/: __init__.py  base.py  bound.py  number.py  op.py  ref.py  value.py
client/tinychain/state/: __init__.py  base.py  bound.py  chain.py  generic.py  number.py  op.py  ref.py  value.py
fs/: Cargo.toml
fs/hostfs/: Cargo.toml
fs/src/: dir.rs  file.rs  lib.rs
host/: .gitignore  Cargo.toml
host/auth/src/: lib.rs
host/btree/: Cargo.toml  README.md
host/btree/src/: file.rs  lib.rs  slice.rs
host/chain/: Cargo.toml  README.md
host/chain/src/: block.rs  history.rs  lib.rs  public.rs  store.rs  sync.rs
host/collection/: Cargo.toml  README.md
host/collection/src/: base.rs  lib.rs  public.rs  schema.rs
host/error/: Cargo.toml  README.md
host/error/src/: lib.rs
host/fs/: Cargo.toml  README.md
host/fs/src/: block.rs  lib.rs
host/generic/: Cargo.toml  README.md
host/generic/src/: id.rs  lib.rs  map.rs  stream.rs  time.rs  tuple.rs
host/math/: Cargo.toml  README.md
host/math/src/: einsum.rs  lib.rs  svd.rs
host/scalar/: Cargo.toml  README.md
host/scalar/src/: lib.rs  public.rs
host/server/: Cargo.toml  README.md
host/server/examples/: example.rs  replicate.rs
host/server/src/: builder.rs  claim.rs  client.rs  gateway.rs  kernel.rs  lib.rs  server.rs  txn.rs
host/src/: chain.rs  closure.rs  cluster.rs  collection.rs  fs.rs  gateway.rs  http.rs  kernel.rs  lib.rs  main.rs  state.rs  stream.rs  txn.rs
host/src/chain/: block.rs  blockchain.rs  data.rs  internal.rs  mod.rs  subject.rs  sync.rs
host/src/cluster/: class.rs  dir.rs  handlers.rs  leader.rs  library.rs  load.rs  mod.rs  owner.rs  replica.rs  service.rs
host/src/fs/: dir.rs  (+4 more)
host/state/: Cargo.toml  README.md
host/stream/: Cargo.toml
host/table/: Cargo.toml  README.md
host/tensor/: Cargo.toml  README.md  build.rs
host/tests/: simple.rs
host/transact/: Cargo.toml  README.md
host/value/: Cargo.toml  README.md
scalar/: Cargo.toml
scalar/src/: lib.rs  op.rs  reference.rs
scalar/value/: Cargo.toml
state/scalar/: Cargo.toml
tests/: .gitignore  README.md  __init__.py  base.py  op.py  requirements.txt  scalar.py  setup.cfg  test_app.py  test_auth_scopes.py  test_btree.py  test_client_docs.py  test_cluster.py  test_einsum.py  test_graph.py  test_multi_cluster.py  test_multi_host.py  test_neural_net.py  test_op.py  test_ops.py  test_replication.py  test_single_cluster.py  test_table.py  test_table_demo.py  test_tensor.py  test_value.py  testutils.py  tinychain  value.py  yc_demo.py
tests/apps/: Dockerfile  __main__.py  test_app.py  test_btree.py  test_chain.py  test_graph.py  test_inheritance.py  test_linalg.py  test_neural_net.py  test_operators.py  test_table.py  test_table_demo.py  test_tensor.py  testutils.py
tests/client/: __main__.py  test_adam.py  test_linalg.py  test_machine.py  test_ml.py  test_neural_net.py  test_table.py  test_tensor.py  test_value.py
tests/host/: __main__.py  benchmark.py  test_btree.py  test_chain.py  test_class.py  test_client_docs.py  test_einsum.py  test_graph.py  test_table.py  test_table_demo.py  test_tensor.py  testutils.py
tests/tctest/: Dockerfile  __main__.py  benchmark.py  persistence.py  process.py  templates.py
transact/: Cargo.toml
transact/src/: id.rs  lib.rs  txn.rs
txn/: Cargo.toml
txn/src/: lib.rs  request.rs
(+631 files in other folders)
