[package]
name = "tinychain"
version = "0.1.0"
authors = ["haydnv"]
edition = "2018"
description = "A next-gen database + application server"
license = "Apache-2.0"
readme = "README.md"
repository = "http://github.com/haydnv/tinychain.git"

keywords = ["database", "host", "platform", "runtime", "environment"]
categories = ["concurrency", "database implementations", "data structures", "web programming"]

[dependencies]
async-trait = "0.1"
auth = { path = "auth" }
destream_json = { version = "0.1", optional = true }
env_logger = "0.8"
error = { path = "error" }
futures = "0.3"
generic = { path = "generic" }
hyper = { version = "0.14", features = ["full"], optional = true }
log = { version = "0.4", features = ["release_max_level_warn"] }
rand = "0.7"
safecast = "0.1"
serde = { version = "1.0", features = []}
scalar = { path = "scalar" }
structopt = "0.3"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "time"] }

[features]
default = ["http"]
http = ["hyper", "destream_json"]
