[package]
name = "tinychain"
version = "0.1.0"
authors = ["haydnv"]
edition = "2018"
description = "A next-gen database + application server"
license = "Apache-2.0"
readme = "README.md"
repository = "http://github.com/haydnv/tinychain.git"

keywords = ["database", "host", "platform", "runtime", "environment"]
categories = ["concurrency", "database implementations", "data structures", "web programming"]

[lib]
name = "tinychain"
path = "src/lib.rs"

[[bin]]
name = "tinychain"
path = "src/main.rs"

[dependencies]
async-trait = "0.1"
auth = { path = "auth" }
bytes = "1.0"
destream = "0.2"
destream_json = { version = "0.2", optional = true }
env_logger = "0.8"
error = { path = "error" }
futures = "0.3"
futures-locks = "0.6"
generic = { path = "generic" }
hyper = { version = "0.14", features = ["full"], optional = true }
log = { version = "0.4", features = ["release_max_level_warn"] }
safecast = "0.1"
serde = { version = "1.0", features = []}
serde_json = { version = "1.0", optional = true }
transact = { path = "transact" }
value = { path = "value" }
structopt = "0.3"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "time"] }
url = { version = "2.2", optional = true }

[features]
default = ["http"]
http = ["hyper", "destream_json", "url", "serde_json"]
