[package]
name = "auth"
version = "0.1.0"
authors = ["haydnv"]
edition = "2018"
description = "Tinychain's authentication & authorization library"
license = "Apache-2.0"
repository = "http://github.com/haydnv/tinychain.git"

keywords = ["tinychain", "authorization"]
categories = ["authentication"]

[dependencies]
base64 = "0.12"
error = {path = "../error"}
ed25519-dalek = "1.0"
generic = {path = "../generic"}
rand = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
signature = "1.1"
value = {path = "../scalar/value"}
