[metadata]
name = tinychain
version = 0.14.0
author = The TinyChain Contributors
author_email = code@tinychain.net
description = Provides an asynchronous implementation of a TinyChain host.
keywords = 'distributed cross-service transaction ml platform'
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/haydnv/tinychain
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Financial and Insurance Industry
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Topic :: Software Development
    Topic :: Software Development :: Code Generators