[metadata]
name = tinychain
version = 0.1.5
author = Haydn Vestal
description = A Python client for Tinychain: http://git.io/JtryR
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/haydnv/tinychain
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Financial and Insurance Industry
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Topic :: Software Development
    Topic :: Software Development :: Code Generators

[options]
packages = find:
python_requires = >=3.7
install_requires =
    requests
