[package]
name = "fs"
version = "0.1.0"
authors = ["haydnv"]
edition = "2018"
description = "Tinychain's transactional filesystem layer. Unstable."
license = "Apache-2.0"
repository = "http://github.com/haydnv/tinychain.git"

keywords = ["tinychain", "transaction", "transactional", "filesystem"]
categories = ["concurrency", "data structures", "filesystem"]

[dependencies]
async-trait = "0.1"
bytes = "1.0"
futures = "0.3"
futures-locks = "0.6"
env_logger = "0.8"
error = { path = "../error" }
generic = { path = "../generic" }
hostfs = { path = "hostfs"}
log = { version = "0.4", features = [] }
transact = { path = "../transact"}
uuid = { version = "0.8", features = ["serde", "v4"] }
