[package]
name = "tinychain"
version = "0.16.0"
authors = ["code@tinychain.net"]
edition = "2021"
description = "Next-gen cloud service runtime"
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/haydnv/tinychain.git"

keywords = ["distributed", "transactional", "host", "platform", "runtime"]
categories = ["concurrency", "database-implementations", "data-structures", "hardware-support", "web-programming"]

[[bin]]
name = "tinychain"
path = "src/main.rs"

[features]
opencl = ["tc-collection/opencl"]

[dependencies]
async-hash = "0.5"
async-trait = "0.1"
bytes = "1.5"
clap = { version = "4.4", features = ["derive"] }
destream = "0.7"
destream_json = { version = "0.12", features = ["tokio-io"] }
env_logger = "0.11"
freqfs = { version = "0.9", features = ["logging", "stream"] }
futures = "0.3"
get-size = "0.1"
get-size-derive = "0.1"
hex = "0.4"
http-body-util = "0.1"
hyper = { version = "1.1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
log = { version = "0.4", features = ["release_max_level_info"] }
num_cpus = "1.16"
pin-project = "1.1"
rjwt = "0.5"
safecast = "0.2"
serde = { version = "1.0", features = [] }
serde_json = { version = "1.0" }
tbon = "0.5"
tc-chain = "0.4"
tc-collection = "0.4"
tc-error = "0.11"
tc-fs = "0.4"
tc-scalar = "0.4"
tc-state = "0.4"
tc-transact = "0.20"
tc-value = "0.12"
tcgeneric = "0.10"
tokio = { version = "1.35", features = ["net", "rt-multi-thread"] }
url = "2.5"
