[package]
name = "tinychain"
version = "0.17.0"
authors = ["code@tinychain.net"]
edition = "2021"
description = "Next-gen cloud service runtime"
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/haydnv/tinychain.git"

keywords = ["distributed", "transactional", "host", "platform", "runtime"]
categories = ["concurrency", "database-implementations", "data-structures", "hardware-support", "web-programming"]

[workspace]
members = [
    "chain",
    "collection",
    "error",
    "generic",
    "scalar",
    "server",
    "state",
    "transact",
    "value",
]

[[bin]]
name = "tinychain"
path = "src/main.rs"

[features]
btree = ["tc-server/btree"]
table = ["tc-server/btree"]
tensor = ["tc-server/btree"]
collection = ["btree", "table", "tensor"]
service = ["tc-server/service"]
opencl = ["tc-server/opencl"]
default = ["collection", "service"]
none = []

[dependencies]
async-trait = "0.1"
clap = { version = "4.4", features = ["derive"] }
destream = "0.7"
destream_json = { version = "0.12", features = ["tokio-io"] }
env_logger = "0.11"
freqfs = { version = "0.9", features = ["logging", "stream"] }
futures = "0.3"
http-body-util = "0.1"
hyper = { version = "1.2", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
log = { version = "0.4", features = ["release_max_level_info"] }
rjwt = "0.5"
serde = { version = "1.0", features = [] }
serde_json = { version = "1.0" }
tbon = "0.5"
tc-error = { path = "error" }
tc-server = {path = "server" }
tc-value = { path = "value" }
tcgeneric = { path = "generic" }
tokio = { version = "1.36", features = ["net", "rt-multi-thread"] }
url = "2.5.0"
