[package]
name = "tinychain"
version = "0.17.0"
authors = ["code@tinychain.net"]
edition = "2021"
description = "Next-gen cloud service runtime"
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/haydnv/tinychain.git"

keywords = ["distributed", "transactional", "host", "platform", "runtime"]
categories = ["concurrency", "database-implementations", "data-structures", "hardware-support", "web-programming"]

[workspace]
members = [
    "chain",
    "collection",
    "error",
    "generic",
    "scalar",
    "server",
    "state",
    "transact",
    "value",
]

[[bin]]
name = "tinychain"
path = "src/main.rs"

[features]
btree = ["tc-server/btree"]
table = ["tc-server/table"]
tensor = ["tc-server/tensor"]
collection = ["btree", "table", "tensor"]
service = ["tc-server/service"]
opencl = ["tc-server/opencl"]
default = ["collection", "service"]

[dependencies]
async-trait = "0.1"
bytes = "1.7"
clap = { version = "4.5", features = ["derive"] }
destream = "0.8"
destream_json = { version = "0.13", features = ["tokio-io"] }
env_logger = "0.11"
freqfs = { version = "0.10", features = ["logging", "stream"] }
futures = "0.3"
hex = "0.4"
http-body-util = "0.1"
hyper = { version = "1.4", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
log = { version = "0.4", features = ["release_max_level_info"] }
serde = { version = "1.0", features = [] }
serde_json = { version = "1.0" }
tbon = "0.6"
tc-error = "0.12"
tc-server = "0.1"
tc-value = "0.13"
tcgeneric = "0.11"
tokio = { version = "1.39", features = ["net", "rt-multi-thread"] }
url = "2.5.0"
