[metadata]
name = tctest
version = 0.8.0
author = The TinyChain Contributors
author_email = haydn@tinychain.net
description = Test utilities & an automated test suite for TinyChain
keywords = 'benchmark unit test utilities'
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/haydnv/tinychain
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Financial and Insurance Industry
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Topic :: Software Development
    Topic :: Software Development :: Code Generators

[options]
packages = find:
python_requires = >=3.7
