[package]
name = "transact"
version = "0.1.0"
authors = ["haydnv"]
edition = "2018"
description = "A Tinychain transaction"
license = "Apache-2.0"
repository = "http://github.com/haydnv/tinychain.git"

keywords = ["tinychain", "transaction", "executor"]
categories = ["concurrency", "data structures"]

[dependencies]
async-trait = "0.1"
bytes = "1.0"
destream = "0.2"
env_logger = "0.8"
error = { path = "../error" }
futures = "0.3"
futures-locks = "0.6"
generic = { path = "../generic" }
hostfs = { path = "hostfs" }
log = { version = "0.4", features = [] }
rand = "0.7"
serde = { version = "1.0", features = []}
uuid = { version = "0.8", features = ["v4"] }
