[package]
name = "txn"
version = "0.1.0"
authors = ["haydnv"]
edition = "2018"
description = "A Tinychain transaction executor"
license = "Apache-2.0"
repository = "http://github.com/haydnv/tinychain.git"

keywords = ["tinychain", "transaction"]
categories = ["asynchronous", "concurrency"]

[dependencies]
auth = {path = "../auth"}
error = {path = "../error"}
generic = {path = "../generic"}
rand = "0.7"
serde = {version = "1.0", features = []}
