[metadata]
name = tinychain
version = 0.16.0
author = The TinyChain Contributors
author_email = code@tinychain.net
description = A Python client for TinyChain: http://git.io/JtryR
keywords = 'distributed cross-service transaction ml platform'
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/haydnv/tinychain
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Financial and Insurance Industry
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Topic :: Software Development
    Topic :: Software Development :: Code Generators

[options]
packages = find:
python_requires = >=3.9
install_requires =
    requests

[build_sphinx]
source-dir = docs/source
build-dir  = docs/_build
all_files  = 1

[upload_sphinx]
upload-dir = docs/_build/html
