[package]
name = "hostfs"
version = "0.1.0"
authors = ["haydnv"]
edition = "2018"
description = "Tinychain host filesystem interface. Unstable."
license = "Apache-2.0"
repository = "http://github.com/haydnv/tinychain.git"

keywords = ["tinychain", "host", "fs"]
categories = ["filesystem"]

[dependencies]
bytes = "1.0"
futures-locks = "0.6"
error = { path = "../../error" }
generic = { path = "../../generic" }
