[package]
name = "tc-chain"
authors = ["code@tinychain.net"]
version = "0.1.0"
edition = "2021"
description = "TinyChain's BlockChain and SyncChain data structures"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/haydnv/tinychain.git"

[dependencies]
async-hash = "0.5"
async-trait = "0.1"
bytes = "1.3"
destream = "0.7"
futures = "0.3"
freqfs = "0.9"
get-size = "0.1"
hex = "0.4"
log = { version = "0.4" }
num_cpus = "1.13"
safecast = "0.2"
tbon = "0.5"
tc-collection = { path = "../collection" }
tc-error = { path = "../error" }
tc-scalar = { path = "../scalar" }
tc-transact = { path = "../transact" }
tc-value = { path = "../value" }
tcgeneric = { path = "../generic" }
