[package]
name = "tc-collection"
version = "0.4.0"
authors = ["code@tinychain.net"]
edition = "2021"
description = "TinyChain's collection types"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/haydnv/tinychain.git"

keywords = ["tinychain", "btree", "table", "tensor", "collection"]
categories = ["database", "database-implementations", "data-structures"]

[features]
opencl = ["ha-ndarray/opencl"]

[dependencies]
async-trait = "0.1"
b-table = { version = "0.2", features = ["all"] }
b-tree = { version = "0.3", features = ["all"] }
collate = { version = "0.4", features = ["stream"] }
destream = "0.7"
ds-ext = { path = "../../../ds-ext" }
futures = "0.3"
freqfs = { version = "~0.9.1", features = ["logging"] }
ha-ndarray = { version = "0.3", features = ["freqfs", "stream"] }
itertools = "0.12"
log = { version = "0.4", features = ["release_max_level_info"] }
num_cpus = "1.16"
smallvec = "1.11"
pin-project = "1.1"
rayon = "1.8"
safecast = "0.2"
tc-error = { path = "../error", features = ["ha-ndarray"] }
tc-scalar = { path = "../scalar" }
tc-transact = { path = "../transact" }
tc-value = { path = "../value" }
tcgeneric = { path = "../generic" }
tokio = { version = "1.36", features = ["sync"] }
