[package]
name = "tc-collection"
version = "0.5.0"
authors = ["code@tinychain.net"]
edition = "2021"
description = "TinyChain's collection types"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/haydnv/tinychain.git"

keywords = ["tinychain", "btree", "table", "tensor", "collection"]
categories = ["database", "database-implementations", "data-structures"]

[features]
btree = ["b-tree/all", "collate/stream", "tokio/sync"]
table = ["btree", "b-table/all", "smallvec"]
tensor = ["table", "tc-error/ha-ndarray", "ha-ndarray/freqfs", "ha-ndarray/stream", "itertools", "rayon"]
opencl = ["ha-ndarray/opencl"]

[dependencies]
async-trait = "0.1"
b-table = { version = "0.3", optional = true }
b-tree = { version = "0.4", optional = true }
collate = { version = "0.4", optional = true }
destream = "0.8"
ds-ext = "0.2"
futures = "0.3"
freqfs = { version = "0.10", features = ["logging"] }
ha-ndarray = { version = "0.4", optional = true }
itertools = { version = "0.13", optional = true }
log = { version = "0.4", features = ["release_max_level_info"] }
num_cpus = "1.16"
smallvec = { version = "1.13", optional = true }
pin-project = "1.1"
rayon = { version = "1.10", optional = true }
safecast = "0.2"
tc-error = "0.12"
tc-scalar = "0.5"
tc-transact = "0.21"
tc-value = "0.13"
tcgeneric = "0.11"
tokio = { version = "1.39", optional = true }
