[package]
name = "tc-error"
version = "0.11.0"
authors = ["code@tinychain.net"]
edition = "2021"
description = "TinyChain's generic error struct"
license = "Apache-2.0"
repository = "https://github.com/haydnv/tinychain.git"
readme = "README.md"

keywords = ["tinychain", "error", "service", "mesh"]
categories = ["rust-patterns"]

[dependencies]
destream = "0.7"
ha-ndarray = { version = "0.3", optional = true }
log = { version = "0.4", features = ["release_max_level_info"] }
pathlink = { path = "../../../pathlink" }
rjwt = { path = "../../../rjwt/rust", optional = true }
serde = "1.0"
txfs = { path = "../../../txfs", optional = true }
txn_lock = { path = "../../../txn_lock", optional = true }
