[package]
name = "tc-error"
version = "0.12.0"
authors = ["code@tinychain.net"]
edition = "2021"
description = "TinyChain's generic error struct"
license = "Apache-2.0"
repository = "https://github.com/haydnv/tinychain.git"
readme = "README.md"

keywords = ["tinychain", "error", "service", "mesh"]
categories = ["rust-patterns"]

[dependencies]
async-trait = "0.1"
destream = "0.8"
ha-ndarray = { version = "0.4", optional = true }
log = { version = "0.4", features = ["release_max_level_info"] }
pathlink = "0.3"
rjwt = { version = "0.6", optional = true }
serde = "1.0"
txfs = { version = "0.4", optional = true }
txn_lock = { version = "0.10", optional = true }
