[package]
name = "tc-fs"
version = "0.2.0"
authors = ["code@tinychain.net"]
edition = "2021"
description = "TinyChain's transactional filesystem interface layer"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/haydnv/tinychain.git"

keywords = ["tinychain", "transaction", "file", "directory", "filesystem"]
categories = ["concurrency", "data-structures"]

[dependencies]
async-hash = "0.5"
async-trait = "0.1"
bytes = "1.4"
destream = "0.7"
futures = "0.3"
freqfs = { version = "0.9", features = ["all"] }
get-size = "0.1"
get-size-derive = "0.1"
log = { version = "0.4", features = ["release_max_level_info"] }
num_cpus = "1.15"
rjwt = "0.4"
safecast = "0.2"
tbon = "0.5"
tc-chain = "0.2"
tc-collection = "0.2"
tc-error = "0.9"
tc-scalar = "0.2"
tc-transact = "0.18"
tc-value = "0.10"
tcgeneric = "0.8"
tokio = { version = "1.33", features = ["rt-multi-thread", "signal"] }
tokio-util = { version = "0.7", features = ["io"] }
