[package]
name = "tc-fs"
version = "0.4.0"
authors = ["code@tinychain.net"]
edition = "2021"
description = "TinyChain's transactional filesystem interface layer"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/haydnv/tinychain.git"

keywords = ["tinychain", "transaction", "file", "directory", "filesystem"]
categories = ["concurrency", "data-structures"]

[dependencies]
async-hash = "0.5"
async-trait = "0.1"
bytes = "1.5"
destream = "0.7"
ds-ext = "0.1"
futures = "0.3"
freqfs = { version = "0.9", features = ["all"] }
get-size = "0.1"
get-size-derive = "0.1"
log = { version = "0.4", features = ["release_max_level_info"] }
num_cpus = "1.16"
rjwt = "0.5"
safecast = "0.2"
tbon = "0.5"
tc-chain = "0.4"
tc-collection = "0.4"
tc-error = "0.11"
tc-scalar = "0.4"
tc-transact = "0.20"
tc-value = "0.12"
tcgeneric = "0.10"
tokio = { version = "1.35", features = ["rt-multi-thread", "signal"] }
tokio-util = { version = "0.7", features = ["io"] }

