[package]
name = "tc-fs"
version = "0.4.0"
authors = ["code@tinychain.net"]
edition = "2021"
description = "TinyChain's transactional filesystem interface layer"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/haydnv/tinychain.git"

keywords = ["tinychain", "transaction", "file", "directory", "filesystem"]
categories = ["concurrency", "data-structures"]

[dependencies]
async-hash = "0.5"
async-trait = "0.1"
bytes = "1.5"
destream = "0.7"
ds-ext = "0.1"
futures = "0.3"
freqfs = { version = "0.9", features = ["all"] }
get-size = "0.1"
get-size-derive = "0.1"
log = { version = "0.4", features = ["release_max_level_info"] }
num_cpus = "1.16"
rjwt = "0.5"
safecast = "0.2"
tbon = "0.5"
tc-chain = { path = "../chain" }
tc-collection = { path = "../collection" }
tc-error = { path = "../error" }
tc-scalar = { path = "../scalar" }
tc-transact = { path = "../transact" }
tc-value = { path = "../value" }
tcgeneric = { path = "../generic" }
tokio = { version = "1.35", features = ["rt-multi-thread", "signal"] }
tokio-util = { version = "0.7", features = ["io"] }
