[package]
name = "tcgeneric"
version = "0.7.0"
authors = ["code@tinychain.net"]
edition = "2021"
description = "Generic data types used internally by TinyChain"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/haydnv/tinychain.git"

categories = ["data-structures"]

[dependencies]
async-hash = "0.5"
async-trait = "0.1"
destream = "0.7"
futures = "0.3"
get-size = "0.1"
get-size-derive = "0.1"
hex = "0.4"
pathlink = { version = "0.1", features = ["all"] }
safecast = "0.2"
serde = { version = "1.0", features = [] }
sha2 = "0.10"
tc-error = "0.8"
