[package]
name = "tc-math"
version = "0.5.0"
authors = ["haydn@tinychain.net"]
edition = "2018"
description = "Mathematical algorithms for TinyChain tensors. Unstable."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/haydnv/tinychain.git"

keywords = ["tinychain", "tensor", "math"]
categories = ["algorithms", "concurrency", "mathematics", "science"]

[dependencies]
log = { version = "0.4", features = ["release_max_level_warn"] }
tc-error = "0.6"
tc-transact = { path = "../transact", features = ["tensor"] }
tc-value = "0.7"
tc-tensor = { path = "../tensor" }
tcgeneric = "0.5"
