[package]
name = "tc-math"
version = "0.7.0"
authors = ["code@tinychain.net"]
edition = "2021"
description = "Mathematical algorithms for TinyChain tensors. DEPRECATED."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/haydnv/tinychain.git"

keywords = ["tinychain", "tensor", "math"]
categories = ["algorithms", "concurrency", "mathematics", "science"]

[dependencies]
log = { version = "0.4", features = ["release_max_level_warn"] }
tc-error = { path = "../error" }
tc-transact = { path = "../transact", features = ["tensor"] }
tc-value = { path = "../value" }
tc-tensor = { path = "../tensor" }
tcgeneric = { path = "../generic" }
