[package]
name = "tc-scalar"
authors = ["code@tinychain.net"]
version = "0.1.0"
edition = "2021"
description = "TinyChain's scalar value enum, including concurrently-resolvable op definitions and references"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/haydnv/tinychain.git"

keywords = ["scalar", "value", "op", "ref", "resolve"]
categories = ["concurrency", "data-structures"]

[dependencies]
async-hash = "0.5"
async-trait = "0.1"
bytes = "1.3"
destream = "0.7"
futures = "0.3"
get-size = "0.1"
get-size-derive = "0.1"
log = { version = "0.4" }
num_cpus = "1.13"
safecast = "0.2"
serde = { version = "1.0", features = [] }
tc-error = "0.8"
tc-transact = "0.17"
tc-value = "0.9"
tcgeneric = "0.7"
