[package]
name = "tc-server"
version = "0.1.0"
edition = "2021"
description = "TinyChain's cluster server logic, including peer discovery and replication"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/haydnv/tinychain.git"

keywords = ["tinychain", "cluster", "peer", "discovery", "replication"]
categories = ["concurrency", "data-structures", "network-programming"]

[dependencies]
aes-gcm-siv = "0.11"
async-trait = "0.1"
destream = "0.7"
ds-ext = { path = "../../../ds-ext" }
futures = "0.3"
freqfs = "0.9"
gethostname = "0.4"
base64 = "0.21"
local-ip-address = "0.5"
log = "0.4"
mdns-sd = "0.10"
rjwt = "0.5"
serde = "1.0"
tc-error = { path = "../error" }
tc-value = { path = "../value" }
tc-transact = { path = "../transact" }
tcgeneric = { path = "../generic" }
tokio = { version = "1.36", features = ["sync", "time"] }
umask = "2.1"
uuid = { version = "1.7", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1.36", features = ["macros", "rt-multi-thread"] }
