[package]
name = "tc-server"
version = "0.1.0"
edition = "2021"
description = "TinyChain's cluster server logic, including peer discovery and replication"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/haydnv/tinychain.git"

keywords = ["tinychain", "cluster", "peer", "discovery", "replication"]
categories = ["concurrency", "data-structures", "network-programming"]

[features]
btree = ["tc-state/btree"]
table = ["tc-state/table"]
tensor = ["tc-state/tensor"]
service = ["tc-state/chain"]
opencl = ["tc-state/opencl"]

[dependencies]
aes-gcm-siv = "0.11"
async-trait = "0.1"
destream = "0.8"
ds-ext = "0.2"
futures = "0.3"
freqfs = "0.10"
gethostname = "0.5"
local-ip-address = "0.6"
log = "0.4"
mdns-sd = "0.11"
rand = "0.8"
rjwt = "0.6"
safecast = "0.2"
serde = "1.0"
tc-collection = { version = "0.5", optional = true }
tc-error = { version = "0.12", features = ["rjwt"] }
tc-scalar = "0.5"
tc-state = "0.5"
tc-value = "0.13"
tc-transact = "0.21"
tcgeneric = "0.11"
tokio = { version = "1.39", features = ["sync", "time"] }
umask = "2.1"
uuid = { version = "1.10", features = ["v4"] }

[dev-dependencies]
env_logger = "0.11"
tokio = { version = "1.39", features = ["macros", "rt-multi-thread"] }
