[package]
name = "tc-state"
version = "0.4.0"
authors = ["code@tinychain.net"]
edition = "2021"
description = "TinyChain's general state enum"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/haydnv/tinychain.git"

keywords = ["chain", "collection", "object", "scalar", "generic"]
categories = ["data-structures"]

[dependencies]
async-hash = "0.5"
async-trait = "0.1"
bytes = "1.5"
destream = "0.7"
futures = "0.3"
get-size = "0.1"
get-size-derive = "0.1"
log = "0.4"
num_cpus = "1.16"
safecast = "0.2"
tc-chain = "0.4"
tc-collection = "0.4"
tc-error = "0.11"
tc-fs = "0.4"
tc-scalar = "0.4"
tc-transact = "0.20"
tc-value = "0.12"
tcgeneric = "0.10"
