[package]
name = "tc-state"
version = "0.4.0"
authors = ["code@tinychain.net"]
edition = "2021"
description = "TinyChain's general state enum"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/haydnv/tinychain.git"

keywords = ["chain", "collection", "object", "scalar", "generic"]
categories = ["data-structures"]

[features]
chain = ["tc-chain", "collection"]
collection = ["tc-collection"]

[dependencies]
async-hash = "0.5"
async-trait = "0.1"
bytes = "1.5"
destream = "0.7"
futures = "0.3"
get-size = "0.1"
get-size-derive = "0.1"
log = "0.4"
num_cpus = "1.16"
safecast = "0.2"
tbon = "0.5"
tc-chain = { path = "../chain", optional = true }
tc-collection = { path = "../collection", optional = true }
tc-error = { path = "../error" }
tc-scalar = { path = "../scalar" }
tc-transact = { path = "../transact" }
tc-value = { path = "../value" }
tcgeneric = { path = "../generic" }
tokio = { version = "1.36", features = ["fs"] }
tokio-util = "0.7"
